--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -62,7 +62,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand logo">N</a>
+                    <a href="#" class="navbar-brand logo">A</a>
                 </div>
                 <nav class="collapse navbar-collapse" role="navigation">
                     <form class="navbar-form navbar-left" action="/search_results" method="post">
