--- a/templates/admin_feed.html
+++ b/templates/admin_feed.html
@@ -243,6 +243,7 @@
                                 </li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="/logout">Log out</a></li>
                                 <!-- <li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
 											class="glyphicon glyphicon-user"></i>{{email}}</a>
