--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -97,7 +97,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/myProfile">My Profile</a></li>
                                 <li><a href="/settings">Settings</a></li>
-                                <li><a href="">Log out</a></li>
+                                <li><a href="/logout">Log out</a></li>
                             </ul>
                         </li>
                     </ul>
