--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -256,9 +256,9 @@
 									<a class="dropdown-toggle" data-toggle="dropdown"><i
 											class="glyphicon glyphicon-user"></i>{{myEmail}}</a>
 									<ul class="dropdown-menu">
-										<li><a href="\myProfile">My Profile</a></li>
+										<li><a href="/myProfile">My Profile</a></li>
 										<!-- <li><a href="">Settings</a></li> -->
-										<li><a href="\logout">Log out</a></li>
+										<li><a href="/logout">Log out</a></li>
 									</ul>
 									<!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 									  <a class="dropdown-item" href="#">Action</a>
