--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -239,9 +239,9 @@
                             <!-- <a onclick="edit()"> <button type="button" class="btn btn-primary">Edit</button></a> -->
                             <hr>
 
-                            <p class="w3-large"><b><i
+                            <!-- <p class="w3-large"><b><i
                                         class="fa fa-asterisk fa-fw w3-margin-right w3-text"></i>Followers</b>
-                            </p>
+                            </p> -->
 
                             <!-- <p>Nishanth</p>
                                 <p>Cool person</p>
