--- a/templates/profile.html
+++ b/templates/profile.html
@@ -117,7 +117,7 @@
 
                     <div class="w3-white w3-text-grey w3-card-4">
                         <div class="w3-display-container">
-                            <img src="data:;base64,{{ image }}" style="width:100%" alt="Avatar">
+                            <img src="data:;base64,{{ image }}" style="width:100%" alt="Avatar" onerror="this.src='https://miro.medium.com/max/560/1*MccriYX-ciBniUzRKAUsAw.png'">
                             <div class="w3-display-bottomleft w3-container w3-text-black">
 
                             </div>
