--- a/templates/display_profiles.html
+++ b/templates/display_profiles.html
@@ -135,7 +135,7 @@
                         <!-- <div class="w3-white w3-text-grey w3-card-4"> -->
                         <!-- <div class="w3-display-container"> -->
                         <img src="data:;base64,{{profile['photo'] }}" style="width:60%; height:250px; padding:1em"
-                            alt="Avatar">
+                            alt="Avatar" onerror="this.src='https://miro.medium.com/max/560/1*MccriYX-ciBniUzRKAUsAw.png'">
                         <div class="w3-display-bottomleft w3-container w3-text-black">
                         </div>
                         <br>
