--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -141,6 +141,10 @@
                             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text edited"></i>{{p}}
                             </p>
                             {% endfor %}
+                            <p><i class="fa fa-venus-mars fa-fw w3-margin-right w3-large w3-text edited"></i>{{gender}}
+                            </p>
+                            <p><i class="fa fa-calendar fa-fw w3-margin-right w3-large w3-text edited"></i>{{dob}}
+                            </p>
 
                             <button type="button" class="btn btn-primary" data-toggle="modal"
                                 data-target="#exampleModal" data-whatever="@getbootstrap">Edit</button>
@@ -160,7 +164,7 @@
                                                 <div class="form-group">
                                                     <label for="Username" class="col-form-label">Username:</label>
                                                     <input type="text" class="form-control" name="Username"
-                                                        value={{username}}>
+                                                        value="{{username}}" required>
                                                 </div>
                                                 <!-- <div class="form-group">
                                                     <label for="School" class="col-form-label">School:</label>
@@ -179,7 +183,7 @@
                                                     <label for="profilePhoto" class="col-form-label">Profile
                                                         Photo:</label>
                                                     <input type="file" name="profilePhoto" size="40" id="profilePhoto"
-                                                        src={{image}}>
+                                                        src={{image}} accept="image/*">
                                                 </div>
 
 
