--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -293,7 +293,10 @@
 							<!-- content -->
 							<div class="card">
 								<div class="card-body">
-									<h3 class="card-title">{{post['username']}}</h3>
+									<h3 class="card-title">{{post['username']}}
+										<p style="float:right;font-style: normal; font-size: 0.7em;">
+											{{post['timestamp']}}</p>
+									</h3>
 								</div>
 								{% if post['image'] != "" %}
 								<img src="data:;base64,{{post['image'] }}" class="card-img-top" alt="...">
@@ -301,55 +304,60 @@
 								{% endif %}
 
 								<div class="card-body">
-									<h4 class="card-title">{{post['text']}}</h4>
-									<hr style="height:1px;border:none;color:#333;background-color:#333;" />
-									<form class="form center-block" action="/update_likes" method="POST">
-										<div style="padding-left:8px;padding-bottom:8px">
-											<input type="hidden" name="poster_email" id="poster_email"
-												value="{{post['email']}}">
-											<input type="hidden" name="post_id" id="post_id"
-												value="{{post['post_id']}}">
-											<input type="hidden" name="likes" id="likes" value="{{post['likes']}}">
-											<button class="fa fa-thumbs-up button" type="submit">
-												<style>
-													.button {
-														background-color: Transparent;
-														background-repeat: no-repeat;
-														border: none;
-														cursor: pointer;
-														overflow: hidden;
-														outline: none;
-														font-size: 18px;
-														/* color:red; */
-													}
-												</style>
-											</button>
-											{{post['likes']}} people liked this
-										</div>
-									</form>
+
+									<h4 class="col-sm-10 card-title">{{post['text']}}</h4>
+
+									<!-- <p class="col-sm-2">{{post['timestamp']}}</p> -->
 								</div>
+								<hr>
+								<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+								<form class="form center-block" action="/update_likes" method="POST">
+									<div style="padding-left:8px;padding-bottom:8px">
+										<input type="hidden" name="poster_email" id="poster_email"
+											value="{{post['email']}}">
+										<input type="hidden" name="post_id" id="post_id" value="{{post['post_id']}}">
+										<input type="hidden" name="likes" id="likes" value="{{post['likes']}}">
+										<button class="fa fa-thumbs-up button" type="submit">
+											<style>
+												.button {
+													background-color: Transparent;
+													background-repeat: no-repeat;
+													border: none;
+													cursor: pointer;
+													overflow: hidden;
+													outline: none;
+													font-size: 18px;
+													/* color:red; */
+												}
+											</style>
+										</button>
+										{{post['likes']}} people liked this
+									</div>
+								</form>
 							</div>
-							<style>
-								.card-img-top {
-									min-width: 50%;
-									max-width: 100%;
-									width: auto;
-									height: auto;
-								}
-							</style>
-
-							<!--/row-->
 						</div>
-						<!-- end for loop here -->
-						<br>
-						{% endfor %}
+						<style>
+							.card-img-top {
+								min-width: 50%;
+								max-width: 100%;
+								width: auto;
+								height: auto;
+							}
+						</style>
 
-					</div><!-- /col-9 -->
-				</div><!-- /padding -->
-			</div>
-			<!-- /main -->
+						<!--/row-->
+					</div>
+					<!-- end for loop here -->
+					<br>
+					{% endfor %}
 
+				</div><!-- /col-9 -->
+			</div><!-- /padding -->
 		</div>
+		<!-- /main -->
+
+	</div>
 	</div>
 	</div>
 
