--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,7 +39,7 @@
 						Member Sign Up
 					</span>
 					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email" value={{email}}>
+						<input class="input100" type="text" name="email" placeholder="Email" value="{{email}}" required>
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -47,7 +47,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" name="pass" placeholder="Password" required>
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -59,7 +59,7 @@
 						<label for="profilePhoto" class="btn btn-primary "
 							style="border-radius: 40px;margin-top:10px;margin-bottom:20px"><i class="fa fa-upload"></i>
 							&nbsp; Upload Profile Picture</label>
-						<input type="file" name="profilePhoto" size="40" id="profilePhoto"
+						<input type="file" name="profilePhoto" size="40" id="profilePhoto" accept="image/*"
 							style="padding-bottom:7px;display: none">
 					</div>
 
@@ -68,7 +68,23 @@
 
 
 					<div class="wrap-input100 validate-input" data-validate="Username is required">
-						<input class="input100" type="text" name="username" placeholder="Username">
+						<input class="input100" type="text" name="username" placeholder="Username" required>
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-person" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate="Gender is required">
+						<input class="input100" type="text" name="gender" placeholder="Gender" required>
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-person" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate="Date of Birth is required">
+						<input class="input100" type="date" name="dob" placeholder="Date of Birth" required > 
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-person" aria-hidden="true"></i>
@@ -95,7 +111,7 @@
 						<div class="row ">
 							<div class="wrap-input100 validate-input Phone col-sm-10"
 								data-validate="Phone number is required" id="addon" style="float:left">
-								<input class="input100" type="text" name="phone_no0" placeholder="Phone No">
+								<input class="input100" type="tel" name="phone_no0" placeholder="Phone No" pattern="[0-9]{10}">
 								<span class="focus-input100"></span>
 								<span class="symbol-input100">
 									<i class="fa fa-person" aria-hidden="true"></i>
