--- a/templates/admin_feed.html
+++ b/templates/admin_feed.html
@@ -243,7 +243,7 @@
                                 </li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="/logout">Log out</a></li>
+                                <li><a href="/logout">Log out</a></li>
                                 <!-- <li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
 											class="glyphicon glyphicon-user"></i>{{email}}</a>
@@ -294,7 +294,10 @@
                             <!-- content -->
                             <div class="card">
                                 <div class="card-body">
-                                    <h3 class="card-title">{{post['username']}}</h3>
+                                    <h3 class="card-title">{{post['username']}}
+                                        <p style="float:right;font-style: normal; font-size: 0.7em;">
+                                            {{post['timestamp']}}</p>
+                                    </h3>
                                 </div>
                                 {% if post['image'] != "" %}
                                 <img src="data:;base64,{{post['image'] }}" class="card-img-top" alt="...">
@@ -320,8 +323,8 @@
                                                         cursor: pointer;
                                                         overflow: hidden;
                                                         outline: none;
-                                                        font-size:24px;
-                                                        color:red;
+                                                        font-size: 24px;
+                                                        color: red;
                                                     }
                                                 </style>
                                             </button>
