--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -300,6 +300,7 @@
 								</div>
 								{% if post['image'] != "" %}
 								<img src="data:;base64,{{post['image'] }}" class="card-img-top" alt="...">
+
 								<!-- <br> -->
 								{% endif %}
 
@@ -309,9 +310,13 @@
 
 									<!-- <p class="col-sm-2">{{post['timestamp']}}</p> -->
 								</div>
-								<hr>
-								<hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
+								<hr>
+								<hr>
+								<hr>
+
+								<!-- <hr style="height:1px;border:none;color:#333;background-color:#333;" /> -->
+								<hr style="height:1px;border:none;color:#333;background-color:#333;" />
 								<form class="form center-block" action="/update_likes" method="POST">
 									<div style="padding-left:8px;padding-bottom:8px">
 										<input type="hidden" name="poster_email" id="poster_email"
