Added stored procedure; bug fixes

--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -96,7 +96,7 @@
                                 class="glyphicon glyphicon-user"></i>{{email}}</a>
                         <ul class="dropdown-menu">
                             <li><a href="/myProfile">My Profile</a></li>
-                            <li><a href="/settings">Settings</a></li>
+                            <!-- <li><a href="/settings">Settings</a></li> -->
                             <li><a href="/logout">Log out</a></li>
                         </ul>
                     </li>
