--- a/templates/profile.html
+++ b/templates/profile.html
@@ -95,7 +95,7 @@
                                 class="glyphicon glyphicon-user"></i>{{myEmail}}</a>
                         <ul class="dropdown-menu">
                             <li><a href="/myProfile">My Profile</a></li>
-                            <li><a href="/settings">Settings</a></li>
+                            <!-- <li><a href="/settings">Settings</a></li> -->
                             <li><a href="/logout">Log out</a></li>
                         </ul>
                     </li>
