--- a/templates/chat.html
+++ b/templates/chat.html
@@ -67,8 +67,9 @@
                     <!-- Search Box End -->
                     <!-- sideBar -->
                     <div class="row sideBar">
-                        <div class="row sideBar-body">
                             {% for friend in friends %}
+                        <div class="row sideBar-body">
+                            <!-- {% for friend in friends %} -->
                             <div class="col-sm-3 col-xs-3 sideBar-avatar">
                                 <div class="avatar-icon">
                                     <img src=" data:;base64,{{friend['photo']}} "
@@ -108,6 +109,7 @@
                             </div>
                             {% endfor %}
                         </div>
+                        {% endfor %}
                     </div>
                     <!-- Sidebar End -->
                 </div>
